# project2/swagger-output.json
@@ -25,6 +25,26 @@
     "https"
   ],
   "paths": {
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/users/": {
       "get": {
         "tags": [
@@ -72,6 +92,9 @@
                 "name": "main"
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "503": {
             "description": "Database unavailable"
@@ -129,6 +152,9 @@
           },
           "400": {
             "description": "Validation errors in payload"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "503": {
             "description": "Database unavailable"
@@ -193,6 +219,9 @@
           "400": {
             "description": "Invalid ID"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "User not found"
           },
@@ -244,6 +273,9 @@
           "400": {
             "description": "Invalid ID or validation errors"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "User not found"
           },
@@ -276,6 +308,9 @@
           "400": {
             "description": "Invalid ID"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "User not found"
           },
@@ -297,6 +332,9 @@
         "responses": {
           "200": {
             "description": "Courses retrieved successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "503": {
             "description": "Service Unavailable"
@@ -355,6 +393,9 @@
           "400": {
             "description": "Validation errors in payload"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "503": {
             "description": "Service Unavailable"
           }
@@ -385,6 +426,9 @@
           },
           "400": {
             "description": "Invalid ID"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -471,6 +515,9 @@
           "400": {
             "description": "Invalid ID or validation errors"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -503,6 +550,9 @@
           "400": {
             "description": "Invalid ID"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -524,6 +574,9 @@
         "responses": {
           "200": {
             "description": "Assignments retrieved successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "503": {
             "description": "Database unavailable"
@@ -602,6 +655,9 @@
           "400": {
             "description": "Validation errors in payload"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "503": {
             "description": "Database unavailable"
           }
@@ -632,6 +688,9 @@
           },
           "400": {
             "description": "Invalid ID"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Assignment not found"
@@ -716,6 +775,9 @@
           "400": {
             "description": "Invalid ID or validation errors"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Assignment not found"
           },
@@ -747,6 +809,9 @@
           },
           "400": {
             "description": "Invalid ID"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Assignment not found"
